--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "cropperjs": "^1.5.6",
+    "querystring": "^0.2.0",
     "vant": "^2.2.13",
     "vue": "^2.6.10"
   },
