--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.3.2",
     "querystring": "^0.2.0",
     "vant": "^2.2.13",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
